tui/src/history_cell/snapshots/rexux_tui__history_cell__tests__pnpm_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9             │
│ Run pnpm add -g @openai/rexux to update.        │
│                                                 │
│ See full release notes:                         │
│ https://github.com/openai/rexux/releases/latest │
╰─────────────────────────────────────────────────╯
