tui/src/history_cell/snapshots/rexux_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭─────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.0 -> 9.9.9             │
│ Run vp install -g @openai/rexux to update.      │
│                                                 │
│ See full release notes:                         │
│ https://github.com/openai/rexux/releases/latest │
╰─────────────────────────────────────────────────╯
